--- a/steps/Info.plist
+++ b/steps/Info.plist
@@ -17,9 +17,15 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSHealthShareUsageDescription</key>
+	<string>steps would like to display your steps</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>steps would like to display your steps</string>
+	<key>NSMotionUsageDescription</key>
+	<string>steps would like to display your steps</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
